--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@neondatabase/serverless": "^1.0.2",
+    "@vercel/blob": "^2.2.0",
+    "@vercel/postgres": "^0.10.0",
     "bootstrap": "^5.3.3",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
