--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "^1.0.2",
+    "@types/nodemailer": "^7.0.9",
     "@vercel/blob": "^2.2.0",
     "@vercel/postgres": "^0.10.0",
     "bootstrap": "^5.3.3",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "nodemailer": "^8.0.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.53.2",
