--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vercel/blob": "^2.2.0",
     "@vercel/postgres": "^0.10.0",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^12.34.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "nodemailer": "^8.0.1",
